--- a/rbmaster.conf
+++ b/rbmaster.conf
@@ -21,6 +21,7 @@ cmdpasswd: cmdpasswd
 
 # database parameters
 dbtype: mysql
+dbhost: localhost
 dbname: rockbuild
 dbuser: rockbuild
 dbpwd: rbpassword
