Added cia config parameters

--- a/rbmaster.conf
+++ b/rbmaster.conf
@@ -26,6 +26,14 @@ dbname: rockbuild
 dbuser: rockbuild
 dbpwd: rbpassword
 
+# svn parameters
+svnpath: /sites/svn/rockbox
+
+# cia parameters
+ciaenabled: 0
+ciaproject: project
+ciamodule: module
+
 ### Shell scripts to run on various system events. 
 # NOTE: These script are executed synchronously. Make them run fast!
 
