Use config file values

--- a/rbmaster.conf
+++ b/rbmaster.conf
@@ -34,6 +34,15 @@ ciaenabled: 0
 ciaproject: project
 ciamodule: module
 
+# this is the local directory where clients upload logs and zips etc
+uploaddir: upload
+
+# this is the local directory where zips and logs are moved to
+storedir: data
+
+# this is where titles are made
+titledir: titles
+
 ### Shell scripts to run on various system events. 
 # NOTE: These script are executed synchronously. Make them run fast!
 
