Added git support. Updated configuration management. Enabled 'strict' perl mode.

--- a/rbmaster.conf
+++ b/rbmaster.conf
@@ -1,18 +1,18 @@
 # test run - no uploads or database updates
-test: 1
+test: 0
 
 # which TCP port to use for client connections
-portnum: 19998
+portnum: 19999
 
 # client version numbers
 # if the client reports lower api version than 'apiversion', 
 # update client to 'updaterevision' by downloading 'updateurl'
-apiversion: 35
-updaterevision: 26603
-updateurl: http://svn.rockbox.org/viewvc.cgi/www/buildserver/rbclient.pl?revision=%d
+apiversion: 52
+updaterevision: 1
+updateurl: http://rockbuild.haxx.se/test/rbclient.pl
 
 # if a client is disabled, this message tells him how to ask to get enabled
-enablemsg: Please go to #rockbox to enable your client again.
+enablemsg: Please go to <irc channel or some such> to enable your client again.
 
 # enable commander input
 cmdenabled: 1
@@ -26,14 +26,6 @@ dbname: rockbuild
 dbuser: rockbuild
 dbpwd: rbpassword
 
-# svn parameters
-svnpath: /sites/svn/rockbox
-
-# cia parameters
-ciaenabled: 0
-ciaproject: project
-ciamodule: module
-
 # this is the local directory where clients upload logs and zips etc
 uploaddir: upload
 
@@ -43,17 +35,17 @@ storedir: data
 # this is where titles are made
 titledir: titles
 
-### Shell scripts to run on various system events. 
+### Hooks to run on various system events. 
 # NOTE: These script are executed synchronously. Make them run fast!
 
 # eachcomplete - runs after each completed build
 # parameters: $buildid $client $revision
-eachcomplete: /bin/sh buildcomplete.sh
+eachcomplete: buildcomplete.sh
 
 # roundstart - runs at the start of a build round
 # parameters: $revision
-roundstart: /bin/sh roundstart.sh
+roundstart: roundstart.sh
 
 # roundend - runs at the end of a build round
 # parameters: $revision
-roundend: /bin/sh roundcomplete.sh
+roundend: roundcomplete.sh
